@@ -18,6 +18,7 @@
             WIO_LTE fix SD card initialisation
             Improve SD card reliability on all boards by trying to initialise multiple times before failing
             Added Graphics.scroll command to scroll graphics contents
+            Added 'Terminal' class with built-in VT100 terminal
   
      1v95 : nRF5x: Swap to UART fifo to avoid overrun errors at high baud rates
             Ensure Exceptions/errors are reported on a blank line
